--- a/file-upload/package.json
+++ b/file-upload/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.3.1",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
