--- a/file-upload/package.json
+++ b/file-upload/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-toastify": "^5.3.1",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "read-excel-file": "^4.0.1",
+    "xls-to-json-lc": "^0.3.4",
+    "xlsx-to-json-lc": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
